--- a/sources/config.yaml
+++ b/sources/config.yaml
@@ -1,5 +1,5 @@
 sources:
-  - TASSchoolHand.glyphs
+  - TasSchoolHand.glyphs
 axisOrder:
   - wght
-familyName: TASSchoolHand
+familyName: TasSchoolHand
