New build system

--- a/sources/config.yaml
+++ b/sources/config.yaml
@@ -1,5 +1,34 @@
+recipeProvider: fontprimer
 sources:
-  - TasSh.glyphs
-axisOrder:
-  - wght
-familyName: TasSh
+- TASSh.glyphs
+shortFamilyName: TAS
+variants:
+  - name: Precursive
+    alias: Pre
+    steps:
+      - operation: featureFreeze
+        args: -f ss01
+  - name: Outline
+    steps:
+      - operation: featureFreeze
+        args: -f ss02
+  - name: Cursive
+    steps:
+      - operation: featureFreeze
+        args: -f ss03
+  - name: Starters
+    steps:
+      - operation: featureFreeze
+        args: -f ss04
+  - name: Outline Arrows
+    alias: Arrows
+    steps:
+      - operation: featureFreeze
+        args: -f ss05
+  - name: Dotted
+    steps:
+      - operation: featureFreeze
+        args: -f ss06
+doGuidelines: true
+buildStatic: true
+buildColorVariable: true
